# SingleBehaviorLab

./: .gitignore  CLI.md  HOWTOUSE.md  INSTALL.md  LICENSE  README.md  environment.yml  install.sh  main.py  pyproject.toml  requirements.txt  run.sh
config/: config.yaml
demo/: 01_behavior_sequencing.ipynb  02_segmentation_clustering.ipynb  README.md  colab_segmentation_clustering.ipynb
demo/data/: .gitkeep
demo/data/segmentation_clustering/: sam2_prompts.json
sam2_backend/sam2/: sam2_video_predictor.py
sam2_backend/sam2/modeling/: sam2_base.py
singlebehaviorlab/: __init__.py  __main__.py  _paths.py  cli.py  config.py  demo.py
singlebehaviorlab/backend/: augmentations.py  clustering.py  contrastive.py  data_store.py  embedding_refine.py  inference.py  model.py  registration.py  segmentation.py  segments.py  train.py  training_runner.py  uncertainty.py  video_processor.py  video_utils.py
singlebehaviorlab/data/: training_profiles.json
singlebehaviorlab/gui/: analysis_widget.py  attention_export.py  clip_extraction_widget.py  clustering_widget.py  inference_popups.py  inference_widget.py  inference_worker.py  interactive_timeline.py  labeling_widget.py  main_window.py  metadata_management_widget.py  motion_tracking.py  overlay_export.py  plot_integration.py  qt_helpers.py  registration_widget.py  review_widget.py  segmentation_tracking_widget.py  tab_tutorial_dialog.py  timeline_themes.py  training_profiles.py  training_widget.py  video_utils.py
tests/: conftest.py  test_clustering_smoke.py  test_config.py  test_motion_tracking.py  test_paths.py  test_sam2_smoke.py  test_segments.py
tests/backend/: test_augmentations.py  test_data_store.py  test_model_losses.py  test_model_smoke.py  test_train.py  test_uncertainty.py  test_video_processor.py  test_video_utils.py
