[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singlebehaviorlab"
version = "2.3.5"
description = "Behavioral sequencing and phenotyping with lightweight task specific adaptation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Almir Aljovic" }]
maintainers = [{ name = "Almir Aljovic" }]

dependencies = [
    "PyQt6==6.11.0",
    "PyQt6-WebEngine==6.11.0",
    "PyYAML==6.0.3",
    "numpy>=2.1,<3",
    "h5py==3.14.0",
    "opencv-python==4.13.0.92",
    "Pillow==12.1.1",
    "scipy>=1.14,<2",
    "eva-decord==0.6.1",
    "scikit-learn==1.7.2",
    "pandas==2.3.3",
    "umap-learn==0.5.11",
    "leidenalg==0.11.0",
    "python-igraph==1.0.0",
    "hdbscan==0.8.42",
    "plotly==6.6.0",
    "matplotlib==3.10.8",
    # torch >=2.8 is required: its bundled cuDNN (>=9.8) must be ABI-compatible
    # with the cuDNN jax 0.6.2 was built against.
    "torch>=2.8,<2.12",
    "torchvision>=0.23,<0.25",
    "jax[cuda12]==0.6.2",
    "flax==0.10.7",
    "hydra-core>=1.3",
    "iopath",
    "einops",
    "einshape",
    "huggingface-hub",
    "sentencepiece",
    "absl-py",
]

[project.urls]
Repository = "https://github.com/alms93/SingleBehaviorLab"
Issues = "https://github.com/alms93/SingleBehaviorLab/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
singlebehaviorlab = "singlebehaviorlab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests that load models or process video (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA GPU",
]

[tool.setuptools.packages.find]
where = [".", "third_party/sam2_backend", "third_party/videoprism_backend"]
include = ["singlebehaviorlab*", "sam2*", "videoprism*"]
exclude = ["sam2.benchmark*", "sam2_backend*", "videoprism_backend*", "third_party*"]

[tool.setuptools.package-data]
singlebehaviorlab = [
    "data/config/config.yaml",
    "data/training_profiles.json",
    "licenses/*",
]
sam2 = [
    "*.yaml",
    "configs/*.yaml",
    "configs/**/*.yaml",
]
